--- a/Página 1.html
+++ b/Página 1.html
@@ -14,3 +14,4 @@
     <p>1.	Investigar las características que contienen cada uno de los países con relación a su democracia.</p>
         <p>2.	Identificar las principales características de las democracias de Costa Rica y México.</p>
         <p>3.	Establecer una comparación entre las dos democracias, plasmándolos por medio de una página wed.</p>
+</body>
